--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -74,9 +74,9 @@
       </table>
     </section>
   </main>
-<footer>
-    <p>Copyright &copy; 2024 Leshan Nchoe</p>
-</footer>
+  <footer>
+    <p>Copyright &copy; 2024 TechCon</p>
+  </footer>
 
 </body>
 </html>
