--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -75,7 +75,7 @@
     </section>
   </main>
   <footer>
-    <p>Copyright &copy; 2024 TechCon</p>
+    <p>copyright &copy; 2024 TechCon</p>
   </footer>
 
 </body>
